Fixed alerts in homepage, contrast issue nothing much extension issue basically

--- a/project1/styles/styles.css
+++ b/project1/styles/styles.css
@@ -14,7 +14,7 @@ header h1{
 }
 
 header h2 {
-    color: white;
+    color:  whitesmoke;
     margin: 10px 0 3px 20px;
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif; 
@@ -51,7 +51,7 @@ nav {
 body {              
     background-image: url(images/green.png);
     margin: 0;
-    padding: 0 0 400px 0 ;
+    padding: 0;
     color: #333;
     background-color: white;
 }
@@ -82,7 +82,7 @@ p {
     background-image: url(images/immg.png);
     display: inline-block;
     border-radius: 20px; /* This creates a curvy square type of design */
-    color: white;
+    color: black;
     width: 300px;
     height: 300px;
     background-color: #5f6760;
@@ -94,17 +94,14 @@ p {
     text-align: center;
 }
 
-/* For the Text Color Inside Box */
-.Believe p {
-    color: black;
-}
+
 
 /* For the Consistent Image Circle  */
 .Consistency {
     background-image: url(images/Consistency.png);
     display: inline-block;
     border-radius: 50%; /* This creates a circle type of design rather than a simple box */
-    color: white;
+    color: black;
     width: 300px;
     height: 300px;
     background-color: #5f6760;
@@ -121,7 +118,7 @@ p {
     background-image: url(images/create.png);
     display: inline-block;
     border-radius: 50%; /* This creates a circle type of design rather than a simple box */
-    color: white;
+    color: black;
     width: 300px;
     height: 300px;
     background-color: #5f6760;
@@ -202,7 +199,7 @@ p {
      display: inline-block;
      border-radius: 20px;
      padding: 10px 50px;
-     color: white;
+     color: black;
      background-color: greenyellow;
 }
 
@@ -254,7 +251,7 @@ p {
     border-radius: 20px; 
     display: inline-block; 
     padding: 10px 50px; 
-    color: white; 
+    color: black; 
     background-color: burlywood; 
 }
 
@@ -387,9 +384,9 @@ p {
         footer {
             background-color:gray;
             color: white;
-            padding: 40px 0;
+            padding: 60px 0;
             text-align: left;
-            margin-top: 20px;
+            margin-top: 0px;
         }
         
         .footer-content {
